1999-11-19  Gordon Matzigkeit  <gord@fig.org>

	* grub/asmstub.c (getkey): Stop immediately if we get an EOF.

	* stage2/stage2.c (cmain): Tell enter_cmdline to run forever.
	(run_menu): Tell print_cmdline_message and enter_cmdline that we
	won't run forever.
	* stage2/cmdline.c (enter_cmdline): New argument, FOREVER, for
	when ESC shouldn't allow an exit.  Pass it to
	print_cmdline_message.
	(print_cmdline_message): Use new argument, FOREVER, to decide
	whether to tell the user that ESC exits.

1999-11-18  Gordon Matzigkeit  <gord@fig.org>

	* debian/rules (binary-arch): Don't strip or generate shared
	library dependencies for /usr/sbin/grub-install, since it's a
	script.

	* util/grub-install.in: Create safe temporary log files using
	/bin/tempfile if it is executable.

1999-11-17  Gordon Matzigkeit  <gord@fig.org>

	* stage1/Makefile.am (LDFLAGS): Consolidate multiple -Wl flags.
	* stage2/Makefile.am (PRE_STAGE2_LINK): Likewise.
	(START_LINK): Likewise.
	(STAGE1_5_LINK): Likewise.

1999-11-19  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* util/grub-install.in (debug): New variable.
	(convert): If the device file does not exist, then emit an
	error. Get the GRUB drive instead of the OS device.
	If --debug is specified, then set $debug to yes.
	If $debug is yes, run "set -x".
	Make sure that stage1 and stage2 exist.
	When checking for INSTALL_DEVICE, use "case" instead of "elif"s.
	Make sure that $install_drive is not empty.
	Likewise, make sure that $root_drive is not empty.
	Any error message is redirected to the standard error.

1999-11-19  Pavel Roskin  <pavel_roskin@geocities.com>

	* stage2/Makefile.am (noinst_DATA): Renamed to ...
	(nodist_noinst_DATA): ... this.
	* util/Makefile.am: sbin_SCRIPS -> sbin_SCRIPTS.
	* util/grub-install.in: grub_dir -> grubdir.
	Check if $grub_shell exists before running it.
	(convert): Added a missing "test" after "if".

1999-11-18  OKUJI Yoshinori  <okuji@kuicr.kyoto-u.ac.jp>

	* configure.in: Output grub-install.